* Fixed Players being invisible in loading screen

--- a/content/dota_addons/dota_imba/panorama/styles/custom_game/loading_screen.css
+++ b/content/dota_addons/dota_imba/panorama/styles/custom_game/loading_screen.css
@@ -5,7 +5,6 @@
 .addon-root {
 	width: 100%;
 	height: 100%;
-	z-index: 10;
 }
 
 .down {
